bad/sub_invalid_types_int_string.example_compiler_output
ERROR
[1mbad/sub_invalid_types_int_string.lat:3:4: [1;31merror: [0;1msubtraction is defined only for int values, not `int` and `string`[m
	0 - "";
	  [1;32m^[m
